svg europe map, fine tuning

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/AuslandsBeauftragung.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/AuslandsBeauftragung.cshtml
@@ -3,7 +3,7 @@
 <h3 class="page-title" id="headerTitle">@Localize.Autohaus_EsdAnforderung <small></small></h3>
 
 <div id="divKopf">
-    @Html.Partial("Partial/FormKopf", Model)
+    @Html.Partial("Partial/FormDetails", Model.EsdAnforderung)
 </div>
 
 <div id="divDetails"></div>
