--- a/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
+++ b/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
@@ -1489,7 +1489,7 @@ div.span-alert-placeholder .alert {
 }
 
 .bg-color-ckg-paleorange, .portlet.box.bg-color-ckg-paleorange {
-    background-color: #fcf8e3 !important;
+    background-color: #FCFBF3 !important;
 }
 
 .color-ckg-red {
