--- a/inetpub/wwwroot/ServicesMvc/Views/Wfm/Abmeldevorgaenge/AuftragsDetail.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Wfm/Abmeldevorgaenge/AuftragsDetail.cshtml
@@ -7,7 +7,7 @@
 <h5>
     <button type="button" id="btnBackToResult" class="btn red mini margin-left-10 hide" onclick="CloseAuftragsDetail();"><i class="icon-arrow-left"></i>&nbsp;@Localize.Back</button>
     <i class="icon-tag margin-left-10"></i>
-    <span class="margin-left-10 margin-right-5 bold">@Localize.CaseNoDeregistrationOrder</span> @Model.AktuellerAuftrag.VorgangsNrAbmeldeauftrag
+    <span class="margin-left-10 margin-right-5 bold"> @Model.Selektor.Referenz1Name</span> @Model.AktuellerAuftrag.Referenz1
     <span class="margin-left-10 margin-right-5 bold">@Localize.ChassisNo</span>@Model.AktuellerAuftrag.FahrgestellNr
     <span class="margin-left-10 margin-right-5 bold">@Localize.LicenseNo</span>@Model.AktuellerAuftrag.Kennzeichen
 </h5>
