"Esd Beauftragung": ViewModels, Models, etc

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/AuslandsBeauftragung.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/AuslandsBeauftragung.cshtml
@@ -1,9 +1,9 @@
-﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdAnforderungViewModel
+﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdBeauftragungViewModel
 
 <h3 class="page-title" id="headerTitle">@Localize.Autohaus_EsdAnforderung <small></small></h3>
 
 <div id="divKopf">
-    @Html.Partial("Partial/FormDetails", Model.EsdAnforderung)
+    @Html.Partial("Partial/FormDetails", Model.EsdBeauftragung)
 </div>
 
 <div id="divDetails"></div>
