--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
@@ -1,4 +1,4 @@
-﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdAnforderungViewModel
+﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdBeauftragungViewModel
 
 <style>
 
