--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/Receipt.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/Receipt.cshtml
@@ -1,4 +1,4 @@
-﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdAnforderungViewModel
+﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdBeauftragungViewModel
 
 <div class="alert alert-success">
     <i class="icon-check"></i><span class="padding-left-5"><strong>@Localize.ThankYou</strong>, @Localize.WeReceivedYourOrder! @Localize.ACocOrderTeamMemberWillContactYou</span>
