div. Anpassungen/Korrekturen, u.a. ist nun auch das Mapping auf Klassen mit einer Hierarchieebene (Properties mit Unterproperties) ohne eine Datenumsetzung (mit "flachen" Hilfsklassen für das Mapping) möglich

--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Prozessauswahl.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Prozessauswahl.cshtml
@@ -20,14 +20,14 @@
 
             @if (Model.CanUserSelectCustomer)
             {
-                @Html.FormDropDownListFor(m => m.CustomerId, Model.CustomerList.ToSelectList("CustomerID", "Customername"))
+                @Html.FormDropDownListFor(m => m.CustomerId, Model.CustomerList.ToSelectList("CustomerID", "Customername"), new { @class = "m-wrap" })
             }
             else
             {
                 @Html.HiddenFor(m => m.CustomerId)
             }
 
-            @Html.FormDropDownListFor(m => m.ProzessName, Model.ProzessList.ToSelectList())
+            @Html.FormDropDownListFor(m => m.ProzessName, Model.ProzessList.ToSelectList(), new { @class = "m-wrap" })
 
             <div class="control-group margin-top-20">
                 <label class="control-label">@Localize.UploadFile:</label>
