--- a/inetpub/wwwroot/ServicesMvc/Views/AutohausPartnerUndFahrzeugdaten/Partial/SaveGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/AutohausPartnerUndFahrzeugdaten/Partial/SaveGrid.cshtml
@@ -2,7 +2,7 @@
 @using CkgDomainLogic.AutohausPartnerUndFahrzeugdaten.ViewModels
 @model UploadPartnerUndFahrzeugdatenViewModel
 
-@Html.ValidationSummary()
+@Html.FormValidationSummary()
 
 @{ var gridName = "GridSaveUploadPartnerUndFahrzeugdaten"; }
 
