--- a/dev/Test/WatchlistViewer/WatchlistViewer/UserControls/StockItem.xaml
+++ b/dev/Test/WatchlistViewer/WatchlistViewer/UserControls/StockItem.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" d:DesignHeight="80" d:DesignWidth="300">
     <StackPanel Orientation="Horizontal" Margin="0,0,0,0" ToolTip="{Binding ToolTip}" 
-                Tag="{Binding RelativeSource={RelativeSource Self}}" 
+                Tag="{Binding RelativeSource={RelativeSource Self}}" Cursor="Hand"
                 >
         <StackPanel.InputBindings>
             <MouseBinding Command="{Binding DataContext.ShowWknAtComdirectCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}" 
@@ -20,6 +20,6 @@
         </StackPanel.ContextMenu>
         <TextBlock FontSize="17" Text="{Binding ShortName}" Foreground="Gray" Margin="5,0,0,0" Width="45" TextAlignment="Right" />
         <TextBlock FontSize="17" FontWeight="Bold" Text="{Binding ValueFormatted}" Foreground="Black" Margin="2,0,2,0" Width="55" TextAlignment="Right" />
-        <TextBlock Background="{Binding ForeColor}" Width="10" Height="{Binding PixelAbsPercentChangeForUI}" VerticalAlignment="Center" ToolTip="{Binding ToolTipChangePercent}" />
+        <TextBlock Background="{Binding ForeColor}" Width="15" Opacity="0.2" Height="{Binding PixelAbsPercentChangeForUI}" VerticalAlignment="Center" ToolTip="{Binding ToolTipChangePercent}" />
     </StackPanel>
 </UserControl>
