--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormDetails.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormDetails.cshtml
@@ -37,8 +37,10 @@
     #EsdAnforderungDetailsAjaxForm .box-top {
         min-height: 320px !important;
     }
-    #EsdAnforderungDetailsAjaxForm .box-bottom {
-        margin-bottom: 0 !important;
+    @@media (min-width: 868px) {
+        #EsdAnforderungDetailsAjaxForm .box-bottom {
+            margin-bottom: 0 !important;
+        }
     }
 
 </style>
